# blink

./: CMakeLists.txt  Makefile  README.md  index.html  setup.sh  webserver  webserver.c
docs/: Template.md
html/: index.html
include/: blink_orm.h  debug.h  file_watcher.h  html_serve.h  request_handler.h  server.h  socket_utils.h  sqlite_handler.h  template.h  websocket.h
src/: client.c  file_watcher.c  handle_client.c  html_serve.c  request_handler.c  server.c  socket_utils.c  sqlite_handler.c  template.c  websocket.c
template-examples/: 01-variables.html  02-conditionals.html  03-loops.html  04-conditional-loops.html  05-sqlite-queries.html
test/: create_sample_db.sql  minimal.html  sample.db  test.html
www/: conditional-loops.html  conditionals.html  index.html  loops.html  sample.db  sql.html  variables.html
